Final ...for Production

--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -3,9 +3,9 @@ const subTitle: string = "Ask us anything about our brand and products, and get 
 const makeId = (base: any, index: any) => `${base}${index + 1}`;
 const faqs = [
   {
-    heading: "Where can I purchase Hikvision products in the UAE?",
+    heading: "Where can I purchase Hikvision products in the UAE and Dubai?",
     content:
-      "You can purchase authentic Hikvision products from Lovosis Technology U.A.E, an authorized distributor of Hikvision in the UAE. We offer a wide range of security and surveillance solutions to meet your needs.",
+      "You can purchase authentic Hikvision products from Dubai Hikvision, an wholesale distributor of Hikvision in the UAE and Dubai. We offer a wide range of security and surveillance solutions to meet your needs.",
   },
   {
     heading: "What types of Hikvision products do you distribute?",
@@ -15,22 +15,22 @@ const faqs = [
   {
     heading: "Are your Hikvision products genuine and authentic?",
     content:
-      "Yes, all Hikvision products offered by Lovosis Technology are 100% genuine and authentic. As an authorized distributor, we ensure the highest quality standards and provide products directly from Hikvision.",
+      "Yes, all Hikvision products offered by Dubai Hikvision are 100% genuine and authentic. As an Wholesale distributor, we ensure the highest quality standards and provide products directly from Hikvision.",
   },
   {
     heading: "Do you offer installation services for Hikvision products?",
     content:
-      "While we do not provide installation services directly, we can recommend trusted partners who specialize in the installation and setup of Hikvision products. Feel free to contact us for referrals.",
+      "Yes, we provide installation services directly, we can recommend trusted partners who specialize in the installation and setup of Hikvision products. Feel free to contact us for referrals.",
   },
   {
     heading: "What kind of support do you offer for Hikvision products?",
     content:
-      "We offer comprehensive technical support and assistance for Hikvision products purchased through Lovosis Technology. Our team of experts is available to help you with product inquiries, troubleshooting, and guidance.",
+      "We offer comprehensive technical support and assistance for Hikvision products purchased through Dubai Hikvision. Our team of experts is available to help you with product inquiries, troubleshooting, and guidance.",
   },
   {
-    heading: "How can I become a reseller or partner with Lovosis Technology for Hikvision products?",
+    heading: "How can I become a reseller or partner with Dubai Hikvision for Hikvision products?",
     content:
-      "If you're interested in becoming a reseller or partner with Lovosis Technology Dubai, please contact us to discuss partnership opportunities and requirements. We welcome collaborations with businesses looking to distribute Hikvision products in the UAE.",
+      "If you're interested in becoming a reseller or partner with Dubai Hikvision, please contact us to discuss partnership opportunities and requirements. We welcome collaborations with businesses looking to distribute Hikvision products in the UAE and Dubai.",
   },
 ];
 
