--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,29 +8,6 @@ import GoogleAnalytics from "../components/GoogleAnalytics.astro";
 import ScrollProgress from "../components/ScrollProgress.astro";
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description, keywords ,structuredData} = Astro.props;
-// const structuredData = {
-//   "@context": "http://schema.org",
-//   "@type": "Organization",
-//   name: "Lovosis Technology Dubai",
-//   url: "https://dubai-hikvision.com/",
-//   logo: "https://dubai-hikvision.com/lovosisgraph.jpg",
-//   description:
-//     description ??
-//     "Authorized Hikvision distributor based in Dubai, UAE. Explore our range of Hikvision products for your security needs.",
-//   address: {
-//     "@type": "PostalAddress",
-//     streetAddress: "25th St - Naif - Dubai - United Arab Emirates",
-//     addressLocality: "Dubai",
-//     addressRegion: "Dubai",
-//     postalCode: "123241",
-//     addressCountry: "AE",
-//   },
-//   contactPoint: {
-//     "@type": "ContactPoint",
-//     telephone: "+971 50 998 2727",
-//     contactType: "Sales",
-//   },
-// };
 
 ---
 
@@ -57,7 +34,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
       title={title ??
         "Best Hikvision Distributor in Dubai, UAE "}
       description={description ??
-        "Hikvision dealer in Dubai,U.A.E. Get top-tier CCTV systems at competitive rates. Authorized dealer."}
+        "Hikvision wholesale dealer in Dubai,U.A.E. Get top-tier CCTV systems at competitive rates. Wholesale dealer.wholesale distributor"}
       canonical={canonicalURL}
       openGraph={{
         basic: {
@@ -71,7 +48,7 @@ const { title, description, keywords ,structuredData} = Astro.props;
         optional: {
 					description:
 						description ??
-						"Hikvision dealer in Dubai,U.A.E. Get top-tier CCTV systems at competitive rates. Authorized dealer.",
+						"Hikvision wholesale dealer in Dubai,U.A.E. Get top-tier CCTV systems at competitive rates. Wholesale dealer.wholesale distributor",
           
 					siteName: "Dubai Hikvision",
 					locale: "en_US",
@@ -90,14 +67,14 @@ const { title, description, keywords ,structuredData} = Astro.props;
         imageAlt: "Dubai Hikvision",
         description:
           description ??
-          "Dubai Hikvision is an authorized distributor of Hikvision products in Dubai, UAE.",
+          "Dubai Hikvision is an wholesale distributor of Hikvision products in Dubai, UAE.",
       }}
       extend={{
         meta: [
           {
             name: "keywords",
             content:
-              "Hikvision distributor, Dubai, UAE, surveillance, security" +
+              "Hikvision wholesale distributor, Dubai, UAE, surveillance, security" +
               keywords,
           },
           { name: "robots", content: "index, follow" },
