--- a/src/components/FooterSections.astro
+++ b/src/components/FooterSections.astro
@@ -40,7 +40,7 @@ const currentYear = new Date().getFullYear();
             rel="noopener noreferrer"
             class="ml-1 text-blue-700 dark:text-blue-400 relative group"
           >
-            Lovosis
+            Lovosis Pvt. Limited Banglore
             <span class="absolute left-0 bottom-0 w-0 h-0.5 bg-cyan-600 transition-all duration-300 group-hover:w-full"></span>
           </a></p> 
         </p>
