--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -114,6 +114,7 @@ const structuredData = {
         "@type": "Product",
         "name": product.title,
         "description": product.description,
+        "image": "https://dubai-hikvision.com" + product.image.src,
         "url": "https://dubai-hikvision.com" + product.link, 
         "brand": {
           "@type": "Brand",
